# DB-AGENTS

./: .env  README.md  assis_api_sql_db.py  csv_agent.py  first_agent.py  fun_call_db_agent.py  fun_calling.py  helpers.py  main.py  pyproject.toml  requirements.txt  sql_db_agent.py
db/: salaries_2023.db  salaries_2023.sql
