[project]
name = "db-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[experimental]",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.2",
    "pandas>=2.2.3",
    "langchain-experimental>=0.3.4",
    "tabulate>=0.9.0",
]
